<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:id="@+id/edtSizeVector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sizeVector"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:inputType="number"
            android:maxLength="3"
    />

    <EditText
            android:id="@+id/edtInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/inputText"
            app:layout_constraintTop_toTopOf="@id/edtSizeVector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:inputType="text"
    />


    <TextView
            android:id="@+id/txtViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    <TextView
            android:id="@+id/txtResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtViewResult"
    />
    <Button
            android:id="@+id/btnProcess"
            android:text="@string/btnProcess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtInput"
    />

</androidx.constraintlayout.widget.ConstraintLayout>